// Use DBML to define your database structure
// Docs https//dbml.dbdiagram.io/docs

Table Role {
  id varchar [primary key]
  description text
}

Table User {
  id varchar [primary key]
  first_name varchar
  last_name varchar
  email varchar [unique]
  password varchar
  role_id varchar
  disabled boolean
  bio text
  age integer
  created_by_id varchar
  created_at timestamp
  updated_by_id varchar
  updated_at timestamp
}

Ref: User.role_id > Role.id
Ref: User.created_by_id > User.id
Ref: User.updated_by_id > User.id


Table Workflow {
  id integer [primary key]
  name varchar
  created_by_id varchar
  created_at timestamp
  updated_by_id varchar
  updated_at timestamp
}

Ref: Workflow.created_by_id > User.id
Ref: Workflow.updated_by_id > User.id

enum CommandStatus {
    completed
    started
    stopped
    not_executed
}


Table Command {
  id integer [primary key]
  path varchar
  workflow_id int
  category_id int
  started_at timestamp
  started_by_id varchar
  completed_at timestamp
  stopped_at timestamp
  stopped_by_id varchar
  status CommandStatus
  created_by_id varchar
  created_at timestamp
  updated_by_id varchar
  updated_at timestamp
}

Ref: Command.workflow_id > Workflow.id
Ref: Command.category_id > Category.id
Ref: Command.created_by_id > User.id
Ref: Command.updated_by_id > User.id
Ref: Command.started_by_id > User.id
Ref: Command.stopped_by_id > User.id

Table Category {
  id integer [primary key]
  name varchar
  created_by_id varchar
  created_at timestamp
  updated_by_id varchar
  updated_at timestamp
}

Ref: Category.created_by_id > User.id
Ref: Category.updated_by_id > User.id

Table Tag {
  id integer [primary key]
  name varchar
  created_by_id varchar
  created_at timestamp
  updated_by_id varchar
  updated_at timestamp
}

Ref: Tag.created_by_id > User.id
Ref: Tag.updated_by_id > User.id

Table CommandTag {
  id integer [primary key]
  command_id integer
  tag_id integer
  created_by_id varchar
  created_at timestamp

  Indexes {
    (command_id, tag_id) [unique]
  }
}

Ref: CommandTag.command_id > Command.id
Ref: CommandTag.tag_id > Tag.id
